--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -60,27 +60,53 @@ border:2px solid #000;
 .service-btn:hover{ background:#333; }
 
 /* Calculator Styles */
-#calculator button{
+#calculator{
 background:#000;
 color:#fff;
-border:2px solid #000;
-padding:12px 24px;
+padding:25px;
+border-radius:8px;
+margin:25px 0;
+max-width:500px;
+}
+#calculator h3{
+margin-top:0;
+color:#fff;
+}
+#calculator label{
+display:block;
+margin-top:12px;
+color:#fff;
+}
+#calculator input, #calculator select{
+width:100%;
+padding:10px;
+margin-top:5px;
+font-size:16px;
+border-radius:4px;
+border:none;
+}
+#calculator button{
+background:#fff;
+color:#000;
+width:100%;
+margin-top:15px;
 font-size:18px;
+padding:12px;
+border:none;
 border-radius:6px;
 cursor:pointer;
 }
-#calculator button:hover{ background:#333; }
+#calculator button:hover{ background:#ccc; }
 .result{
 margin-top:20px;
-padding:20px;
-background:#f4f4f4;
+background:#fff;
+color:#000;
+padding:15px;
 border-radius:6px;
-font-size:16px;
 border:2px solid #ccc;
+font-size:16px;
 }
-.result .line{
-margin-bottom:8px;
-}
+.result .line{margin-bottom:8px;}
 .result .total{
 font-size:20px;
 font-weight:bold;
@@ -153,6 +179,8 @@ This system is built on site, board by board. Unlike cheap slotted panels, feath
 <p>Use this calculator to work out the materials and labour required for your fence installation.</p>
 
 <div id="calculator">
+<h3>Fence Installation Calculator</h3>
+
 <label>Total fence length (metres)</label>
 <input type="number" id="length" min="0" step="0.1">
 
