--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -297,7 +297,7 @@ document.getElementById("result").innerHTML = `
 <div class="line"><strong>Concrete posts:</strong> ${posts} posts (£13 each) = £${postTotal}</div>
 <div class="line"><strong>Gravel boards:</strong> ${gravelBoards} boards (£15 each) = £${gravelTotal}</div>
 <div class="line"><strong>Post mix:</strong> ${postMixBags} bags (£5 each) = £${postMixTotal}</div>
-<div class="line"><strong>Labour:</strong> ${posts} posts × £70 = £${labourTotal}</div>
+<div class="line"><strong>Labour:</strong> ${posts} £${labourTotal}</div>
 <div class="total">Estimated Total: £${grandTotal}</div>
 `;
 }
