--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -252,18 +252,15 @@ If your property is within around six miles of Askern DN6, Home Repairs 4U can p
 
 </main>
 
-<footer>
-<p>📞 Call 07735 873694</p>
-<div>
-<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
-<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
-<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
-<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
-<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
-<br><br>
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">Facebook</a>
-<br><br>
-© Home Repairs 4U | Askern DN6
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+<div class="footer-services">
+<p style="color: white;">Our Services:</p>
+<a href="/services/Exterior-decorating.html">Exterior Decorating</a>
+<a href="/services/garden.html">Garden</a>
+<a href="/services/guttering.html">Guttering</a>
+<a href="/services/Pressure-washing.html">Pressure Washing</a>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </div>
 </footer>
 
