--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -134,6 +134,24 @@ border-radius: 6px;
 box-shadow: 0 0 20px #000;
 }
 .lightbox:target { display: flex; }
+  .site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+.footer-services{
+background:black;
+padding:20px;
+margin-top:15px;
+}
+.footer-services a{
+color:white;
+margin:0 10px;
+text-decoration:none;
+}
 </style>
 </head>
 
