--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -217,6 +217,24 @@ Enter your fence length and height to calculate panels, posts, gravel boards, po
 </div>
 </div>
 
+<h2>Need a More Detailed Quote?</h2>
+
+<p>
+Our basic calculator provides a quick estimate based on standard materials,
+typical panel height, and labour. It’s ideal if you just want a fast guide price.
+</p>
+
+<p>
+The advanced quote allows you to customise your fencing project further. This
+includes adding gates, adjusting for ground type, moving trees or hedges, using
+bespoke panel heights, removing ol fencing and any other site-specific requirements. It ensures your
+final quote reflects the true cost of your unique installation.
+</p>
+
+<a href="https://homerepairs4u.com/fence-adjust.html" class="next-btn">
+Get Advanced Quote
+</a>
+  
 <h2>Why Choose Featheredge Fencing?</h2>
 
 <p>
