--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -227,11 +227,11 @@ typical panel height, and labour. It’s ideal if you just want a fast guide pri
 <p>
 The advanced quote allows you to customise your fencing project further. This
 includes adding gates, adjusting for ground type, moving trees or hedges, using
-bespoke panel heights, removing ol fencing and any other site-specific requirements. It ensures your
+bespoke panel heights, and any other site-specific requirements. It ensures your
 final quote reflects the true cost of your unique installation.
 </p>
 
-<a href="https://homerepairs4u.com/fence-adjust.html" class="next-btn">
+<a href="https://homerepairs4u.com/fence-adjust.html" class="next-btn" style="background:#000;color:#fff;border:2px solid #000;padding:14px 30px;border-radius:6px;display:inline-block;text-decoration:none;font-weight:bold;">
 Get Advanced Quote
 </a>
   
