--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -220,7 +220,7 @@ Enter your fence length and height to calculate panels, posts, gravel boards, po
 <h2>Need a More Detailed Quote?</h2>
 
 <p>
-Our basic calculator provides a quick estimate based on standard materials,
+Our basic calculator provides a quick estimate based on standard fence type, materials,
 typical panel height, and labour. It’s ideal if you just want a fast guide price.
 </p>
 
