--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -231,7 +231,7 @@ bespoke panel heights, and any other site-specific requirements. It ensures your
 final quote reflects the true cost of your unique installation.
 </p>
 
-<a href="https://homerepairs4u.com/fence-adjust.html" class="next-btn" style="background:#000;color:#fff;border:2px solid #000;padding:14px 30px;border-radius:6px;display:inline-block;text-decoration:none;font-weight:bold;">
+<a href="https://homerepairs4u.com/quotes/fence-adjust.html" class="next-btn" style="background:#000;color:#fff;border:2px solid #000;padding:14px 30px;border-radius:6px;display:inline-block;text-decoration:none;font-weight:bold;">
 Get Advanced Quote
 </a>
   
