--- a/quotes/fence-adjust.html
+++ b/quotes/fence-adjust.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>ADD TITLE</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/">
+<link rel="canonical" href="https://homerepairs4u.com/quotes/fence-adjust.html">
 <meta name="description" content="ADD META">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
