--- a/quotes/fence-adjust.html
+++ b/quotes/fence-adjust.html
@@ -5,10 +5,10 @@
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>ADD TITLE</title>
+<title>Advanced Fence Installation Quote | Askern DN6 - Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quotes/fence-adjust.html">
-<meta name="description" content="ADD META">
+<meta name="description" content="Get a fully cusomisable fence installation quote online for Askern DN6 and a six mile radius. Adjust for gates, ground type, bespoke panel heights, hedges, trees, and more. Instant materials, labour, and total cost calculation.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 <style>
