--- a/quotes/fence-adjust.html
+++ b/quotes/fence-adjust.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Fence Installation | Home Repairs 4U – Askern DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/services/fence-installation.html">
+<link rel="canonical" href="https://homerepairs4u.com/quotes/fence-adjust.html">
 <meta name="description" content="Professional fence installation in Askern DN6 and surrounding 6-mile radius. Bespoke height, gravel boards optional, gates, posts, labour, ground adjustments, hedge and tree removal. Get an instant quote online.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
